--- a/style.css
+++ b/style.css
@@ -3,7 +3,66 @@
     padding: 0%;
 }
 .container{
-    background-color: aqua;
-    width: 100px;
-    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: cornflowerblue;
+}
+
+.pagina {
+    width: 1200px;
+    height: 800px;
+
+    border: 1px solid black;
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: white;
+
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.header {
+    width: 100%;
+    height: 400px;
+    background-color: blueviolet;
+}
+.header-izquierdo{
+    width: 30%;
+    height: 100%;
+    border: brown solid 1px;
+
+}
+.nombre{
+    width: 100%;
+    height: 33.33%;
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nombre h1 {
+    text-align: center;
+}
+
+.nombre h1 span:first-of-type {
+    color: white
+}
+
+.nombre h1 span:last-of-type {
+    color: red;
+}
+
+.foto{
+    width: 100%;
+    height: 33.33%;
+    background-color: rgb(127, 28, 164);
+}
+.profesion{
+    width: 100%;
+    height: 33.33%;
+    background-color: rgb(89, 164, 28);
+
 }
