--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 .header {
     width: 100%;
     height: 400px;
-    background-color: blueviolet;
+    background-color: rgb(225, 235, 236);
 }
 .header-izquierdo{
     width: 30%;
@@ -36,12 +36,12 @@
 }
 .nombre{
     width: 100%;
-    height: 33.33%;
-    background-color: yellow;
+    height: 30%;
+    background-color: rgb(231, 231, 167);
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} 
 
 .nombre h1 {
     text-align: center;
@@ -52,17 +52,38 @@
 }
 
 .nombre h1 span:last-of-type {
-    color: red;
+    color: rgb(231, 118, 118);
 }
 
 .foto{
     width: 100%;
-    height: 33.33%;
-    background-color: rgb(127, 28, 164);
+    height: 25%;
+    /* background-color: rgb(195, 172, 204); */
+    display: flex;
+    align-items: right;
+    justify-content: flex-end; 
+    padding: 30px;
 }
+.imgfotoperfil{
+    width: 100px;
+    height: 100px;
+    border-radius: 90%;
+    /* shape-outside: circle(50%); */
+}
+
+
 .profesion{
     width: 100%;
-    height: 33.33%;
-    background-color: rgb(89, 164, 28);
+    height: 30%;
+    background-color: rgb(139, 185, 101);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+}
+.profesion h1{
+    text-align: center;
+}
+.profesion h1 span:first-of-type{
+    color:aqua;
 }
